EC2database.tf
resource "aws_db_instance" "example" {
  allocated_storage    = 10
  db_name              = "mydb"
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.micro"
  username             = var.dbusername
  password             = aws_secretsmanager_secret_version.example.secret_string
  parameter_group_name = "default.mysql8.0"
  skip_final_snapshot  = true
}
